# teco

./: .gitignore  LICENSE.md  README.md  check-prereq.sh  prepare-env.sh  pyproject.toml
_work/: .gitignore
_work/repos/csn/: repos.json
_work/repos/csn-lists/: debug.txt  test.txt  train.txt  val.txt
_work/repos/filtered/: .gitignore  repos.json  used.json
_work/subtokenizer/: .gitignore
_work/subtokenizer/codegpt/: added_tokens.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
_work/subtokenizer/codet5/: added_tokens.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json  vocab.json
_work/subtokenizer/codet5-vanilla/: added_tokens.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
configs/: CodeGPT.yaml  local.yaml
data-collector/: .gitignore  pom.xml
data-collector/adhoc-runner/: pom.xml
data-collector/adhoc-runner/src/main/java/org/teco/: AdHocRunnerGenerator.java  AdHocRunnerGeneratorDepth1.java  AdHocRunnerGeneratorDepth1Modifier.java  AdHocRunnerGeneratorEval.java  AdHocRunnerGeneratorEvalModifier.java  AdHocRunnerGeneratorModifier.java  Helper.java
data-collector/adhoc-runner/src/test/java/org/teco/: TestHelper.java
data-collector/bcverifier/: pom.xml
data-collector/bcverifier/src/main/java/org/teco/: BytecodeConstrainer.java
data-collector/bcverifier/src/main/java/org/teco/bcverifier/: BasicVerifierEx.java  BytecodeConstrainerSession.java  InsnConstraint.java  ParseToks.java  StepwiseMethodAnalyzer.java
data-collector/static-collector/: pom.xml
data-collector/static-collector/src/main/java/org/teco/: AllCollectors.java
data-collector/utils/: pom.xml
python/: .gitignore  prepare-conda-env.sh  setup.py  tasks.py
python/configs/: CodeT5.yaml  eval.yaml  local.yaml
python/teco/: utils.py
python/teco/data/: data.py  eval_setup.py  extend_data.py  gen_atlas_dataset.py  gen_toga_dataset.py  tool.py
python/teco/eval/: convert_atlas_results.py  convert_toga_results.py  specs.py
python/teco/exe/: adhoc_runner_generator.py  bcconstrainer.py  ng.py
python/teco/model/: SingleEvaluator.py  processing.py  subtokenizer_bpe.py
python/teco/tasks/: data.py  exp.py
src/teco/: __about__.py  macros.py
src/teco/data/: ast_visitor.py  bm25.py  cg.py  collect_raw_data.py  collect_repos.py  data_cls.py  extend_data_runtime.py  get_split.py  maven.py  pesudo_structures.py  process_raw_data.py  raw_data_loader.py  structures.py  tool.py  utils.py
src/teco/eval/: compute_runtime_metrics.py  fix_codegpt_preds.py  gen_subset_preds.py  metrics.py  rerank_runnable.py
src/teco/exe/: constraints.py  ng_wrapper.py
src/teco/model/: CodeGPT.py  CodeT5.py  CodeT5NoFinetune.py  generation.py  hf_adapter.py  load_trained.py  loss_scaler.py  prediction.py  save_pretrained.py  subtokenizer.py  utils.py
src/teco/tasks/: exp.py
(+25 files in other folders)
